--- a/frontend/public/pages/user/style/donationStash.css
+++ b/frontend/public/pages/user/style/donationStash.css
@@ -936,9 +936,9 @@ footer {
     }
 
     #UserAccount {
-        justify-content: center;
-        width: 100%;
-        margin-top: 4px;
+        justify-content: flex-end;
+        width: auto;
+        margin-top: 0;
     }
 
     #UserAccount button {
